--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -31,6 +31,7 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
+    needs: build
     steps:
       - name: create release
         uses: actions/create-release@v1
