--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -1,10 +1,13 @@
-name: Deploy Lambda Function
+name: Deploy my Lambda Function
+
+# trigger on all push events to main branch
 on: 
   push:
     branches:
       - main
 
 jobs:
+
   build:
     runs-on: ubuntu-latest
     steps:
@@ -18,8 +21,8 @@ jobs:
         run: |
             cd function
             python -m pip install --upgrade pip
-            if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi 
-      - name: Zip bundle
+            if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
+      - name: Create zip bundle
         run: |
             cd function
             zip -r ../${{ github.sha }}.zip .
@@ -28,18 +31,21 @@ jobs:
         with:
           name: zipped-bundle
           path: ${{ github.sha }}.zip
-
-  publish:
+  
+  upload:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: create release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.github_token }}
+      - name: Download artifact
+        uses: actions/download-artifact@v2
         with:
-          tag_name: ${{ github.run_number }}
-          release_name: Release from ${{ github.run_number }}
-          body: New release for ${{ github.sha }}
-          draft: false
-          prerelease: false
+          name: zipped-bundle
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
+          aws-region: us-east-1
+      - name: Upload to S3
+        #run: aws s3 cp ${{ github.sha }}.zip s3://<your s3 bucket name>/${{ github.sha }}.zip
+        run: aws s3 cp ${{ github.sha }}.zip s3://coursesbucketfri/${{ github.sha }}.zip
