--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -8,8 +8,29 @@ on:
 
 jobs:
 
+  lint:
+    runs-on: ubuntu-latest
+    steps: 
+      - name: Check out code
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
+      - name: Install linting libraries
+        run: |
+            cd function
+            pip install flake8
+      - name: Lint with flake8
+        run: |
+            # Select identifies which errors should cause the job to fail
+            flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+            # The exit zero flag will show errors as warnings and not fail the run
+            flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
   build:
     runs-on: ubuntu-latest
+    needs: lint
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -47,7 +68,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
           aws-region: us-east-1
       - name: Upload to S3
-        #run: aws s3 cp ${{ github.sha }}.zip s3://<YOUR BUCKET NAME HERE>/${{ github.sha }}.zip
         run: aws s3 cp ${{ github.sha }}.zip s3://coursesbucketfri/${{ github.sha }}.zip
 
   deploy:
@@ -63,7 +83,7 @@ jobs:
       - name: Update function code
         run: |
             aws lambda update-function-code \
-              --function-name my-func-2 \
+              --function-name my-function \
               --s3-bucket coursesbucketfri \
               --s3-key ${{ github.sha }}.zip \
               --publish
